{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 70,
  "lineage": "981f31d8-f15c-6204-3d1c-d06f3a6dda45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gergo_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0196d5f02ef13ed99",
            "arn": "arn:aws:ec2:eu-central-1:940482431327:elastic-ip/eipalloc-0196d5f02ef13ed99",
            "association_id": "eipassoc-0d0ce3e31b4e33c8e",
            "domain": "vpc",
            "id": "eipalloc-0196d5f02ef13ed99",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0dcf81678111b3eb7",
            "private_dns": "ip-10-0-82-96.eu-central-1.compute.internal",
            "private_ip": "10.0.82.96",
            "public_dns": "ec2-18-184-148-118.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.148.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging_nat"
            },
            "tags_all": {
              "Name": "staging_nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gergo_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:internet-gateway/igw-08e8e3bcfc8aaa5a2",
            "id": "igw-08e8e3bcfc8aaa5a2",
            "owner_id": "940482431327",
            "tags": {
              "Name": "staging_gergo_igw"
            },
            "tags_all": {
              "Name": "staging_gergo_igw"
            },
            "vpc_id": "vpc-0b83466ca97ab2d0b"
          },
          "dependencies": [
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gergo_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0196d5f02ef13ed99",
            "association_id": "eipassoc-0d0ce3e31b4e33c8e",
            "connectivity_type": "public",
            "id": "nat-03a37a9ea3dbd4cd2",
            "network_interface_id": "eni-0dcf81678111b3eb7",
            "private_ip": "10.0.82.96",
            "public_ip": "18.184.148.118",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06e61479a8c916634",
            "tags": {
              "Name": "staging_nat"
            },
            "tags_all": {
              "Name": "staging_nat"
            }
          },
          "dependencies": [
            "aws_eip.gergo_eip",
            "aws_internet_gateway.gergo_igw",
            "aws_subnet.public_zone_1",
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gergo_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:route-table/rtb-0835edb8bf9185a6c",
            "id": "rtb-0835edb8bf9185a6c",
            "owner_id": "940482431327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a37a9ea3dbd4cd2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging_private_rt"
            },
            "tags_all": {
              "Name": "staging_private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b83466ca97ab2d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gergo_eip",
            "aws_internet_gateway.gergo_igw",
            "aws_nat_gateway.gergo_nat",
            "aws_subnet.public_zone_1",
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gergo_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:route-table/rtb-02d27dc6d937ab72a",
            "id": "rtb-02d27dc6d937ab72a",
            "owner_id": "940482431327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e8e3bcfc8aaa5a2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging_public_rt"
            },
            "tags_all": {
              "Name": "staging_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b83466ca97ab2d0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gergo_igw",
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013dd991c78ec8289",
            "route_table_id": "rtb-0835edb8bf9185a6c",
            "subnet_id": "subnet-0097b0124c71c53df"
          },
          "dependencies": [
            "aws_eip.gergo_eip",
            "aws_internet_gateway.gergo_igw",
            "aws_nat_gateway.gergo_nat",
            "aws_route_table.gergo_private_rt",
            "aws_subnet.private_zone_1",
            "aws_subnet.public_zone_1",
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fee43ab763bd79b0",
            "route_table_id": "rtb-0835edb8bf9185a6c",
            "subnet_id": "subnet-04f9a669b0d4970ad"
          },
          "dependencies": [
            "aws_eip.gergo_eip",
            "aws_internet_gateway.gergo_igw",
            "aws_nat_gateway.gergo_nat",
            "aws_route_table.gergo_private_rt",
            "aws_subnet.private_zone_2",
            "aws_subnet.public_zone_1",
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a48a589e120e3f9",
            "route_table_id": "rtb-02d27dc6d937ab72a",
            "subnet_id": "subnet-06e61479a8c916634"
          },
          "dependencies": [
            "aws_internet_gateway.gergo_igw",
            "aws_route_table.gergo_public_rt",
            "aws_subnet.public_zone_1",
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5334877bcc40910",
            "route_table_id": "rtb-02d27dc6d937ab72a",
            "subnet_id": "subnet-0b3af8a8ca70ce27a"
          },
          "dependencies": [
            "aws_internet_gateway.gergo_igw",
            "aws_route_table.gergo_public_rt",
            "aws_subnet.public_zone_2",
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:subnet/subnet-0097b0124c71c53df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0097b0124c71c53df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482431327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging_priv_eu-central-1a",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging_priv_eu-central-1a",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b83466ca97ab2d0b"
          },
          "dependencies": [
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:subnet/subnet-04f9a669b0d4970ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f9a669b0d4970ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940482431327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging_priv_eu-central-1b",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging_priv_eu-central-1b",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b83466ca97ab2d0b"
          },
          "dependencies": [
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:subnet/subnet-06e61479a8c916634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e61479a8c916634",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940482431327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging_pub_eu-central-1a",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging_pub_eu-central-1a",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b83466ca97ab2d0b"
          },
          "dependencies": [
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:subnet/subnet-0b3af8a8ca70ce27a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3af8a8ca70ce27a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "940482431327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging_pub_eu-central-1b",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging_pub_eu-central-1b",
              "kubernetes.io/cluster/staging_gergo-demo-4": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b83466ca97ab2d0b"
          },
          "dependencies": [
            "aws_vpc.gergo_aws_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gergo_aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:940482431327:vpc/vpc-0b83466ca97ab2d0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a997fb99dd5251e8",
            "default_route_table_id": "rtb-00ce0dd429fb130b8",
            "default_security_group_id": "sg-064478910fde902d2",
            "dhcp_options_id": "dopt-0feac324d6940a93b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b83466ca97ab2d0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ce0dd429fb130b8",
            "owner_id": "940482431327",
            "tags": {
              "Name": "staging_gergo_aws_vpc"
            },
            "tags_all": {
              "Name": "staging_gergo_aws_vpc"
            }
          }
        }
      ]
    }
  ]
}